yoshimi 1.7.0

2020-1-18 Will
* Added explanatary comments to code.
* Doc updates.
* Set release version 1.7.0

2020-1-15 Will
* GUI no longer changes part when changing bank.
* Removed redundant bank code.
* CLI now tracks part number when set elsewhere.
* Set version as 1.7.0 rc8

2020-1-13 Will
* Mod. oscillator warning number out of field.
* Fixed compiler warning from PadSynth.

2020-1-10 Will
* Final doc updates ready for release.
* Set version as 1.7.0 rc7

2020-1-9 Will
* Corrected jack autoconnect.
* Updated user manual.

2020-1-8 Will
* Fixed regression. Some startup arguments not seen.
* Other refinements to config files.
* Set version as 1.7.0 rc6

2020-1-7 Will
* More MIDI_learn refinements.
* Corrected wrongly reported NRPN values.
* Set version as 1.7.0 rc5

2020-1-6 Will
* BugFix: Editing MIDI-learn lost NRPN status.
* Removed legacy NRPN detection.
* Revised MIDI-Learn internal data blocks.
  Uses resolveAll function, not embedded text.
* Removed redundant MIDI-Learn code.
* Set version as 1.7.0 rc4

2020-1-6 Will
* BugFix: State load not updating MIDI_learn GUI.
* Removed legacy min/max double check.
  It created a corner case error when
  min/max are reversed.
* Set version as 1.7.0 rc3

2020-1-2 Will
* Merged in filter bugfix.
* BugFix: M-learn window not auto opening.
* Included new user guide.
* Set version as 1.7.0 rc2

2020-1-1 Will
* Updated copyright notices
* Updated local copy of advanced user manual
* Set version as 1.7.0 rc1

2019-12-31 Will
* Made slider knobs respond to mouse clicks.
  Why was this missed for so long?
* Added names to Yoshimi Control Numbers.ods
* Doc updates.

2019-12-28 Will
* Removed modal from instrument search window.
  Should never have been set! No need to block.

2019-12-23 Will
* Resolved warnings given by GCC V8.
* Corrected appdata errors reported by debian.

2019-12-21 Will
* Small adjustment to User manual.
* Updated ToDo list.
* Set version as 1.6.1 M

2019-12-15 Will